# rust_snippet

./: Cargo.toml
src/: arrays.rs  cls.rs  conditional.rs  define_trains.rs  enums.rs  exec_cmd.rs  functions.rs  hash_map.rs  implement_traits.rs  info.txt  loops.rs  main.rs  modules_use.rs  multisources.rs  option_use.rs  pass_by_reference.rs  pattern_match.rs  pointer_ref.rs  print.rs  random_number.rs  read_file.rs  reading_user_input.rs  reference.rs  regex.rs  running_test.rs  shadow.rs  str_methods.rs  strings.rs  structs.rs  tuples.rs  types.rs  vectors.rs  write_to_file.rs
